downstream OFDM MER
