# internal/api/mux.go
@@ -64,6 +64,7 @@ func Register(router *mux.Router, manager *manager.Manager) {
 	router.HandleFunc("/modems/{modemId}/upstreamHistoryFromModem/{fromTS:[0-9]+}/{toTS:[0-9]+}", api.modemUpstream)
 
 	router.HandleFunc("/modems/{modemId}/traffic/{fromTS:[0-9]+}/{toTS:[0-9]+}", api.ModemTraffic)
+	router.HandleFunc("/modems/{modemId}/pnm/OFDMDownstreamMER", api.OfdmMer).Methods("POST")
 
 	router.HandleFunc("/upstreams", api.upstreams)
 	router.HandleFunc("/upstreams/{upstreamId:[0-9]+}", api.upstreamsById)
